Corrected sonar violation